@startuml
'https://plantuml.com/class-diagram
left to right direction
Entity Carta{
nombre
coste
tipo
power
toughness
CMC
Color
--
agregarCarta()
eliminarCarta()
}
Entity mazo{
nombre de mazo
cantidad de cartas

}
Entity listademazos{
cantidad de mazos
--
verMazo()
agregarNuevoMazo()
eliminarMazo()
}
Entity sistemadeCartas{
Modificar deck
modificar sideboard
construir mazo
ver mazos
}
Carta "60..*"--> "1" mazo
mazo "1.." --> "1" listademazos
listademazos "1" --> "1" sistemadeCartas

@enduml